Some special changes for JMF site

--- a/Resources/views/Post/show.html.twig
+++ b/Resources/views/Post/show.html.twig
@@ -23,7 +23,7 @@
         </tr>
         <tr>
             <th>Author</th>
-            <td>{{ entity.author.username }}</td>
+            <td>entity.author.username </td>
         </tr>
         <tr>
             <th>Date</th>
