--- a/Resources/views/Post/index.html.twig
+++ b/Resources/views/Post/index.html.twig
@@ -21,7 +21,7 @@
         <tr>
             <td><a href="{{ path('admin_post_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
             <td>{{ entity.title }}</td>
-            <td>{{ entity.author.username }}</td>
+            <td> entity.author.username </td>
             <td>{{ entity.teaser }}</td>
             <td>{{ entity.date|date("d - m - Y") }}</td>
             <td>{% if entity.media %}{{ entity.media.title|title }}{% endif %}</td>
